# python-project-83

./: .gitignore  Makefile  Procfile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter.yml
page_analyzer/: app.py  config.py  db_tools.py  url_tools.py
page_analyzer/templates/: add.html  base.html  index.html  list_urls.html  new.html  nopage.html  show.html  view_url.html
